spring/31-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-backend
spec:
  type: ClusterIP
  selector:
    app: spring-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
